syntax = "proto3";

package sum;

message SumMessage{
    int32 firstNumber = 1;
    int32 secondNumber = 2;
}

message Result{
    int32 number = 1;
}

service Sum {
    rpc simpleSum(SumMessage) returns (Result);
    rpc repeatedSum (SumMessage) returns (stream Result);
    rpc streamSum (stream SumMessage) returns (stream Result);
}